--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4802,7 +4802,87 @@
       "[CV] .................... C=30.0, gamma=0.3, kernel=rbf, total=  14.7s\n",
       "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
       "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  12.8s\n",
-      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n"
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  15.2s\n",
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  12.5s\n",
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  12.5s\n",
+      "[CV] C=30.0, gamma=1.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=1.0, kernel=rbf, total=  11.9s\n",
+      "[CV] C=30.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=3.0, kernel=rbf, total=  14.0s\n",
+      "[CV] C=30.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=3.0, kernel=rbf, total=  15.7s\n",
+      "[CV] C=30.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=3.0, kernel=rbf, total=  18.8s\n",
+      "[CV] C=30.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=3.0, kernel=rbf, total=  21.9s\n",
+      "[CV] C=30.0, gamma=3.0, kernel=rbf ...................................\n",
+      "[CV] .................... C=30.0, gamma=3.0, kernel=rbf, total=  16.2s\n",
+      "[CV] C=100.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.01, kernel=rbf, total=  13.3s\n",
+      "[CV] C=100.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.01, kernel=rbf, total=  12.4s\n",
+      "[CV] C=100.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.01, kernel=rbf, total=  13.9s\n",
+      "[CV] C=100.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.01, kernel=rbf, total=  16.9s\n",
+      "[CV] C=100.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.01, kernel=rbf, total=  12.5s\n",
+      "[CV] C=100.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.03, kernel=rbf, total=  14.3s\n",
+      "[CV] C=100.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.03, kernel=rbf, total=  12.3s\n",
+      "[CV] C=100.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.03, kernel=rbf, total=  11.6s\n",
+      "[CV] C=100.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.03, kernel=rbf, total=  12.3s\n",
+      "[CV] C=100.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=100.0, gamma=0.03, kernel=rbf, total=  11.8s\n",
+      "[CV] C=100.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.1, kernel=rbf, total=  11.7s\n",
+      "[CV] C=100.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.1, kernel=rbf, total=  11.3s\n",
+      "[CV] C=100.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.1, kernel=rbf, total=  11.5s\n",
+      "[CV] C=100.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.1, kernel=rbf, total=  12.1s\n",
+      "[CV] C=100.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.1, kernel=rbf, total=  11.5s\n",
+      "[CV] C=100.0, gamma=0.3, kernel=rbf ..................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] ................... C=100.0, gamma=0.3, kernel=rbf, total=  12.1s\n",
+      "[CV] C=100.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.3, kernel=rbf, total=  11.4s\n",
+      "[CV] C=100.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.3, kernel=rbf, total=  11.6s\n",
+      "[CV] C=100.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.3, kernel=rbf, total=  11.6s\n",
+      "[CV] C=100.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=0.3, kernel=rbf, total=  11.5s\n",
+      "[CV] C=100.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=1.0, kernel=rbf, total=  11.0s\n",
+      "[CV] C=100.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=1.0, kernel=rbf, total=  11.1s\n",
+      "[CV] C=100.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=1.0, kernel=rbf, total=  11.1s\n",
+      "[CV] C=100.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=1.0, kernel=rbf, total=  11.4s\n",
+      "[CV] C=100.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=1.0, kernel=rbf, total=  11.7s\n",
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  12.9s\n",
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  12.0s\n",
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  14.0s\n",
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n"
      ]
     }
    ],
