--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4882,7 +4882,23 @@
       "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  12.0s\n",
       "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
       "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  14.0s\n",
-      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n"
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  13.7s\n",
+      "[CV] C=100.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=100.0, gamma=3.0, kernel=rbf, total=  13.7s\n",
+      "[CV] C=300.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  14.9s\n",
+      "[CV] C=300.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  14.4s\n",
+      "[CV] C=300.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  23.5s\n",
+      "[CV] C=300.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  18.5s\n",
+      "[CV] C=300.0, gamma=0.01, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  12.6s\n",
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  11.7s\n",
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n"
      ]
     }
    ],
