--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4898,7 +4898,43 @@
       "[CV] .................. C=300.0, gamma=0.01, kernel=rbf, total=  12.6s\n",
       "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
       "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  11.7s\n",
-      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n"
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  13.7s\n",
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  16.2s\n",
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  20.0s\n",
+      "[CV] C=300.0, gamma=0.03, kernel=rbf .................................\n",
+      "[CV] .................. C=300.0, gamma=0.03, kernel=rbf, total=  13.5s\n",
+      "[CV] C=300.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.1, kernel=rbf, total=  14.9s\n",
+      "[CV] C=300.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.1, kernel=rbf, total=  14.0s\n",
+      "[CV] C=300.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.1, kernel=rbf, total=  12.9s\n",
+      "[CV] C=300.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.1, kernel=rbf, total=  12.1s\n",
+      "[CV] C=300.0, gamma=0.1, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.1, kernel=rbf, total=  12.5s\n",
+      "[CV] C=300.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.3, kernel=rbf, total=  16.0s\n",
+      "[CV] C=300.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.3, kernel=rbf, total=  12.3s\n",
+      "[CV] C=300.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.3, kernel=rbf, total=  10.9s\n",
+      "[CV] C=300.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.3, kernel=rbf, total=  11.1s\n",
+      "[CV] C=300.0, gamma=0.3, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=0.3, kernel=rbf, total=  11.2s\n",
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.2s\n",
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  12.4s\n",
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.8s\n",
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.2s\n",
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n"
      ]
     }
    ],
