--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4934,7 +4934,25 @@
       "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.8s\n",
       "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
       "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.2s\n",
-      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n"
+      "[CV] C=300.0, gamma=1.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=1.0, kernel=rbf, total=  11.3s\n",
+      "[CV] C=300.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=3.0, kernel=rbf, total=  13.1s\n",
+      "[CV] C=300.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=3.0, kernel=rbf, total=  13.5s\n",
+      "[CV] C=300.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=3.0, kernel=rbf, total=  13.7s\n",
+      "[CV] C=300.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=3.0, kernel=rbf, total=  13.0s\n",
+      "[CV] C=300.0, gamma=3.0, kernel=rbf ..................................\n",
+      "[CV] ................... C=300.0, gamma=3.0, kernel=rbf, total=  13.0s\n",
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  15.1s\n",
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  20.2s\n",
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  12.6s\n",
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n"
      ]
     }
    ],
