--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4952,7 +4952,23 @@
       "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  20.2s\n",
       "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
       "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  12.6s\n",
-      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n"
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  14.2s\n",
+      "[CV] C=1000.0, gamma=0.01, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.01, kernel=rbf, total=  24.7s\n",
+      "[CV] C=1000.0, gamma=0.03, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  16.2s\n",
+      "[CV] C=1000.0, gamma=0.03, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  13.8s\n",
+      "[CV] C=1000.0, gamma=0.03, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  12.2s\n",
+      "[CV] C=1000.0, gamma=0.03, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  13.2s\n",
+      "[CV] C=1000.0, gamma=0.03, kernel=rbf ................................\n",
+      "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  13.1s\n",
+      "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  12.4s\n",
+      "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n"
      ]
     }
    ],
