--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4968,7 +4968,57 @@
       "[CV] ................. C=1000.0, gamma=0.03, kernel=rbf, total=  13.1s\n",
       "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n",
       "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  12.4s\n",
+      "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  12.7s\n",
+      "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  12.7s\n",
       "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  13.2s\n",
+      "[CV] C=1000.0, gamma=0.1, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.1, kernel=rbf, total=  18.2s\n",
+      "[CV] C=1000.0, gamma=0.3, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.3, kernel=rbf, total=  15.8s\n",
+      "[CV] C=1000.0, gamma=0.3, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.3, kernel=rbf, total=  13.3s\n",
+      "[CV] C=1000.0, gamma=0.3, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.3, kernel=rbf, total=  13.1s\n",
+      "[CV] C=1000.0, gamma=0.3, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.3, kernel=rbf, total=  11.8s\n",
+      "[CV] C=1000.0, gamma=0.3, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=0.3, kernel=rbf, total=  11.1s\n",
+      "[CV] C=1000.0, gamma=1.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=1.0, kernel=rbf, total=  11.7s\n",
+      "[CV] C=1000.0, gamma=1.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=1.0, kernel=rbf, total=  11.7s\n",
+      "[CV] C=1000.0, gamma=1.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=1.0, kernel=rbf, total=  11.5s\n",
+      "[CV] C=1000.0, gamma=1.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=1.0, kernel=rbf, total=  11.0s\n",
+      "[CV] C=1000.0, gamma=1.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=1.0, kernel=rbf, total=  11.0s\n",
+      "[CV] C=1000.0, gamma=3.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=3.0, kernel=rbf, total=  12.6s\n",
+      "[CV] C=1000.0, gamma=3.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=3.0, kernel=rbf, total=  12.2s\n",
+      "[CV] C=1000.0, gamma=3.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=3.0, kernel=rbf, total=  12.6s\n",
+      "[CV] C=1000.0, gamma=3.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=3.0, kernel=rbf, total=  13.7s\n",
+      "[CV] C=1000.0, gamma=3.0, kernel=rbf .................................\n",
+      "[CV] .................. C=1000.0, gamma=3.0, kernel=rbf, total=  12.3s\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed: 73.6min finished\n"
      ]
     }
    ],
