--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -4454,7 +4454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -5020,6 +5020,29 @@
      "text": [
       "[Parallel(n_jobs=1)]: Done 250 out of 250 | elapsed: 73.6min finished\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "GridSearchCV(cv=5, error_score=nan,\n",
+       "             estimator=SVR(C=1.0, cache_size=200, coef0=0.0, degree=3,\n",
+       "                           epsilon=0.1, gamma='scale', kernel='rbf',\n",
+       "                           max_iter=-1, shrinking=True, tol=0.001,\n",
+       "                           verbose=False),\n",
+       "             iid='deprecated', n_jobs=None,\n",
+       "             param_grid=[{'C': [10.0, 30.0, 100.0, 300.0, 1000.0, 3000.0,\n",
+       "                                10000.0, 30000.0],\n",
+       "                          'kernel': ['linear']},\n",
+       "                         {'C': [1.0, 3.0, 10.0, 30.0, 100.0, 300.0, 1000.0],\n",
+       "                          'gamma': [0.01, 0.03, 0.1, 0.3, 1.0, 3.0],\n",
+       "                          'kernel': ['rbf']}],\n",
+       "             pre_dispatch='2*n_jobs', refit=True, return_train_score=False,\n",
+       "             scoring='neg_mean_squared_error', verbose=2)"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -5038,9 +5061,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'C': 30000.0, 'kernel': 'linear'} :  70363.84006944533\n"
+     ]
+    }
+   ],
    "source": [
     "print(grid_search.best_params_, \": \", np.sqrt(-(grid_search.best_score_)))"
    ]
@@ -5049,7 +5080,56 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 50 candidates, totalling 250 fits\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Using backend SequentialBackend with 1 concurrent workers.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   8.3s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[Parallel(n_jobs=1)]: Done   1 out of   1 | elapsed:    8.2s remaining:    0.0s\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   7.6s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=   7.5s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=  11.3s\n",
+      "[CV] C=629.782329591372, gamma=3.010121430917521, kernel=linear ......\n",
+      "[CV]  C=629.782329591372, gamma=3.010121430917521, kernel=linear, total=  13.9s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  20.9s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  15.2s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n"
+     ]
+    }
+   ],
    "source": [
     "from scipy.stats import expon, reciprocal\n",
     "\n",
