--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5126,7 +5126,69 @@
       "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  20.9s\n",
       "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
       "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  15.2s\n",
-      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n"
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  17.1s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  25.5s\n",
+      "[CV] C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf ......\n",
+      "[CV]  C=26290.206464300216, gamma=0.9084469696321253, kernel=rbf, total=  17.9s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  16.1s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  13.2s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  12.8s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  11.6s\n",
+      "[CV] C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf .....\n",
+      "[CV]  C=84.14107900575871, gamma=0.059838768608680676, kernel=rbf, total=  12.6s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   8.0s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   7.8s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   8.0s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   7.2s\n",
+      "[CV] C=432.37884813148855, gamma=0.15416196746656105, kernel=linear ..\n",
+      "[CV]  C=432.37884813148855, gamma=0.15416196746656105, kernel=linear, total=   7.9s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  12.5s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  12.7s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  12.9s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  12.7s\n",
+      "[CV] C=24.17508294611391, gamma=3.503557475158312, kernel=rbf ........\n",
+      "[CV]  C=24.17508294611391, gamma=3.503557475158312, kernel=rbf, total=  13.1s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  11.1s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  11.2s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  11.4s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  11.5s\n",
+      "[CV] C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf ...\n",
+      "[CV]  C=113564.03940586245, gamma=0.0007790692366582295, kernel=rbf, total=  11.7s\n",
+      "[CV] C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf ......\n",
+      "[CV]  C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf, total=  11.4s\n",
+      "[CV] C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf ......\n",
+      "[CV]  C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf, total=  11.6s\n",
+      "[CV] C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf ......\n",
+      "[CV]  C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf, total=  10.8s\n",
+      "[CV] C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf ......\n",
+      "[CV]  C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf, total=  11.1s\n",
+      "[CV] C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf ......\n",
+      "[CV]  C=108.30488238805073, gamma=0.3627537294604771, kernel=rbf, total=  11.2s\n",
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
+      "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.4s\n",
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
+      "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.0s\n",
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
+      "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.1s\n",
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n"
      ]
     }
    ],
