--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5188,7 +5188,87 @@
       "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.0s\n",
       "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
       "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.1s\n",
-      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n"
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
+      "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.0s\n",
+      "[CV] C=21.344953672647435, gamma=0.023332523598323388, kernel=linear .\n",
+      "[CV]  C=21.344953672647435, gamma=0.023332523598323388, kernel=linear, total=   7.2s\n",
+      "[CV] C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf ......\n",
+      "[CV]  C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf, total=  11.4s\n",
+      "[CV] C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf ......\n",
+      "[CV]  C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf, total=  13.5s\n",
+      "[CV] C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf ......\n",
+      "[CV]  C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf, total=  15.4s\n",
+      "[CV] C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf ......\n",
+      "[CV]  C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf, total=  15.8s\n",
+      "[CV] C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf ......\n",
+      "[CV]  C=5603.270317432516, gamma=0.15023452872733867, kernel=rbf, total=  16.8s\n",
+      "[CV] C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf .....\n",
+      "[CV]  C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf, total=  35.3s\n",
+      "[CV] C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf .....\n",
+      "[CV]  C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf, total=  34.9s\n",
+      "[CV] C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf .....\n",
+      "[CV]  C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf, total=  38.3s\n",
+      "[CV] C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf .....\n",
+      "[CV]  C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf, total=  30.6s\n",
+      "[CV] C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf .....\n",
+      "[CV]  C=157055.10989448498, gamma=0.26497040005002437, kernel=rbf, total=  34.9s\n",
+      "[CV] C=27652.464358739708, gamma=0.2227358621286903, kernel=linear ...\n",
+      "[CV]  C=27652.464358739708, gamma=0.2227358621286903, kernel=linear, total=  17.0s\n",
+      "[CV] C=27652.464358739708, gamma=0.2227358621286903, kernel=linear ...\n",
+      "[CV]  C=27652.464358739708, gamma=0.2227358621286903, kernel=linear, total=  16.7s\n",
+      "[CV] C=27652.464358739708, gamma=0.2227358621286903, kernel=linear ...\n",
+      "[CV]  C=27652.464358739708, gamma=0.2227358621286903, kernel=linear, total=  18.2s\n",
+      "[CV] C=27652.464358739708, gamma=0.2227358621286903, kernel=linear ...\n",
+      "[CV]  C=27652.464358739708, gamma=0.2227358621286903, kernel=linear, total=  16.6s\n",
+      "[CV] C=27652.464358739708, gamma=0.2227358621286903, kernel=linear ...\n",
+      "[CV]  C=27652.464358739708, gamma=0.2227358621286903, kernel=linear, total=  14.0s\n",
+      "[CV] C=171377.39570378003, gamma=0.628789100540856, kernel=linear ....\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=171377.39570378003, gamma=0.628789100540856, kernel=linear, total= 1.2min\n",
+      "[CV] C=171377.39570378003, gamma=0.628789100540856, kernel=linear ....\n",
+      "[CV]  C=171377.39570378003, gamma=0.628789100540856, kernel=linear, total=  53.7s\n",
+      "[CV] C=171377.39570378003, gamma=0.628789100540856, kernel=linear ....\n",
+      "[CV]  C=171377.39570378003, gamma=0.628789100540856, kernel=linear, total= 1.3min\n",
+      "[CV] C=171377.39570378003, gamma=0.628789100540856, kernel=linear ....\n",
+      "[CV]  C=171377.39570378003, gamma=0.628789100540856, kernel=linear, total=  53.9s\n",
+      "[CV] C=171377.39570378003, gamma=0.628789100540856, kernel=linear ....\n",
+      "[CV]  C=171377.39570378003, gamma=0.628789100540856, kernel=linear, total=  37.7s\n",
+      "[CV] C=5385.293820172355, gamma=0.18696125197741642, kernel=linear ...\n",
+      "[CV]  C=5385.293820172355, gamma=0.18696125197741642, kernel=linear, total=   7.4s\n",
+      "[CV] C=5385.293820172355, gamma=0.18696125197741642, kernel=linear ...\n",
+      "[CV]  C=5385.293820172355, gamma=0.18696125197741642, kernel=linear, total=   7.7s\n",
+      "[CV] C=5385.293820172355, gamma=0.18696125197741642, kernel=linear ...\n",
+      "[CV]  C=5385.293820172355, gamma=0.18696125197741642, kernel=linear, total=   8.0s\n",
+      "[CV] C=5385.293820172355, gamma=0.18696125197741642, kernel=linear ...\n",
+      "[CV]  C=5385.293820172355, gamma=0.18696125197741642, kernel=linear, total=   7.6s\n",
+      "[CV] C=5385.293820172355, gamma=0.18696125197741642, kernel=linear ...\n",
+      "[CV]  C=5385.293820172355, gamma=0.18696125197741642, kernel=linear, total=   7.5s\n",
+      "[CV] C=22.59903216621323, gamma=2.850796878935603, kernel=rbf ........\n",
+      "[CV]  C=22.59903216621323, gamma=2.850796878935603, kernel=rbf, total=  10.7s\n",
+      "[CV] C=22.59903216621323, gamma=2.850796878935603, kernel=rbf ........\n",
+      "[CV]  C=22.59903216621323, gamma=2.850796878935603, kernel=rbf, total=  11.8s\n",
+      "[CV] C=22.59903216621323, gamma=2.850796878935603, kernel=rbf ........\n",
+      "[CV]  C=22.59903216621323, gamma=2.850796878935603, kernel=rbf, total=  13.2s\n",
+      "[CV] C=22.59903216621323, gamma=2.850796878935603, kernel=rbf ........\n",
+      "[CV]  C=22.59903216621323, gamma=2.850796878935603, kernel=rbf, total=  13.5s\n",
+      "[CV] C=22.59903216621323, gamma=2.850796878935603, kernel=rbf ........\n",
+      "[CV]  C=22.59903216621323, gamma=2.850796878935603, kernel=rbf, total=  12.6s\n",
+      "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
+      "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  21.0s\n",
+      "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
+      "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  18.8s\n",
+      "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
+      "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  19.6s\n",
+      "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
+      "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  19.4s\n",
+      "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
+      "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  17.8s\n",
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n"
      ]
     }
    ],
