--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5268,7 +5268,45 @@
       "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  19.4s\n",
       "[CV] C=34246.75194632794, gamma=0.3632878599687583, kernel=linear ....\n",
       "[CV]  C=34246.75194632794, gamma=0.3632878599687583, kernel=linear, total=  17.8s\n",
-      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n"
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n",
+      "[CV]  C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf, total=  11.9s\n",
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n",
+      "[CV]  C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf, total=  11.3s\n",
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n",
+      "[CV]  C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf, total=  11.3s\n",
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n",
+      "[CV]  C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf, total=  11.2s\n",
+      "[CV] C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf .......\n",
+      "[CV]  C=167.7278956080511, gamma=0.2757870542258224, kernel=rbf, total=  11.6s\n",
+      "[CV] C=61.54360542501371, gamma=0.6835472281341501, kernel=linear ....\n",
+      "[CV]  C=61.54360542501371, gamma=0.6835472281341501, kernel=linear, total=   7.3s\n",
+      "[CV] C=61.54360542501371, gamma=0.6835472281341501, kernel=linear ....\n",
+      "[CV]  C=61.54360542501371, gamma=0.6835472281341501, kernel=linear, total=   8.0s\n",
+      "[CV] C=61.54360542501371, gamma=0.6835472281341501, kernel=linear ....\n",
+      "[CV]  C=61.54360542501371, gamma=0.6835472281341501, kernel=linear, total=   7.2s\n",
+      "[CV] C=61.54360542501371, gamma=0.6835472281341501, kernel=linear ....\n",
+      "[CV]  C=61.54360542501371, gamma=0.6835472281341501, kernel=linear, total=   7.3s\n",
+      "[CV] C=61.54360542501371, gamma=0.6835472281341501, kernel=linear ....\n",
+      "[CV]  C=61.54360542501371, gamma=0.6835472281341501, kernel=linear, total=   7.0s\n",
+      "[CV] C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf .......\n",
+      "[CV]  C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf, total=  12.3s\n",
+      "[CV] C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf .......\n",
+      "[CV]  C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf, total=  12.8s\n",
+      "[CV] C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf .......\n",
+      "[CV]  C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf, total=  16.9s\n",
+      "[CV] C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf .......\n",
+      "[CV]  C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf, total=  19.6s\n",
+      "[CV] C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf .......\n",
+      "[CV]  C=98.73897389920914, gamma=0.4960365360493639, kernel=rbf, total=  29.7s\n",
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
+      "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  15.8s\n",
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
+      "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  13.6s\n",
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
+      "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  12.7s\n",
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
+      "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  13.5s\n",
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n"
      ]
     }
    ],
