--- a/end_to_end_project/Housing.ipynb
+++ b/end_to_end_project/Housing.ipynb
@@ -5306,7 +5306,83 @@
       "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  12.7s\n",
       "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
       "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  13.5s\n",
-      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n"
+      "[CV] C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf ......\n",
+      "[CV]  C=8935.505635947808, gamma=0.37354658165762367, kernel=rbf, total=  14.7s\n",
+      "[CV] C=135.76775824842434, gamma=0.838636245624803, kernel=linear ....\n",
+      "[CV]  C=135.76775824842434, gamma=0.838636245624803, kernel=linear, total=   8.9s\n",
+      "[CV] C=135.76775824842434, gamma=0.838636245624803, kernel=linear ....\n",
+      "[CV]  C=135.76775824842434, gamma=0.838636245624803, kernel=linear, total=   8.6s\n",
+      "[CV] C=135.76775824842434, gamma=0.838636245624803, kernel=linear ....\n",
+      "[CV]  C=135.76775824842434, gamma=0.838636245624803, kernel=linear, total=   8.7s\n",
+      "[CV] C=135.76775824842434, gamma=0.838636245624803, kernel=linear ....\n",
+      "[CV]  C=135.76775824842434, gamma=0.838636245624803, kernel=linear, total=   8.5s\n",
+      "[CV] C=135.76775824842434, gamma=0.838636245624803, kernel=linear ....\n",
+      "[CV]  C=135.76775824842434, gamma=0.838636245624803, kernel=linear, total=   8.2s\n",
+      "[CV] C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf ......\n",
+      "[CV]  C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf, total= 3.6min\n",
+      "[CV] C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf ......\n",
+      "[CV]  C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf, total= 2.2min\n",
+      "[CV] C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf ......\n",
+      "[CV]  C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf, total= 2.0min\n",
+      "[CV] C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf ......\n",
+      "[CV]  C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf, total= 2.5min\n",
+      "[CV] C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf ......\n",
+      "[CV]  C=151136.20282548846, gamma=1.4922453771381408, kernel=rbf, total= 2.5min\n",
+      "[CV] C=761.4316758498783, gamma=2.6126336514161914, kernel=linear ....\n",
+      "[CV]  C=761.4316758498783, gamma=2.6126336514161914, kernel=linear, total=   7.6s\n",
+      "[CV] C=761.4316758498783, gamma=2.6126336514161914, kernel=linear ....\n",
+      "[CV]  C=761.4316758498783, gamma=2.6126336514161914, kernel=linear, total=   7.4s\n",
+      "[CV] C=761.4316758498783, gamma=2.6126336514161914, kernel=linear ....\n",
+      "[CV]  C=761.4316758498783, gamma=2.6126336514161914, kernel=linear, total=   7.8s\n",
+      "[CV] C=761.4316758498783, gamma=2.6126336514161914, kernel=linear ....\n",
+      "[CV]  C=761.4316758498783, gamma=2.6126336514161914, kernel=linear, total=   7.5s\n",
+      "[CV] C=761.4316758498783, gamma=2.6126336514161914, kernel=linear ....\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[CV]  C=761.4316758498783, gamma=2.6126336514161914, kernel=linear, total=   7.8s\n",
+      "[CV] C=97392.81883041795, gamma=0.09265545895311562, kernel=linear ...\n",
+      "[CV]  C=97392.81883041795, gamma=0.09265545895311562, kernel=linear, total=  37.8s\n",
+      "[CV] C=97392.81883041795, gamma=0.09265545895311562, kernel=linear ...\n",
+      "[CV]  C=97392.81883041795, gamma=0.09265545895311562, kernel=linear, total=  35.5s\n",
+      "[CV] C=97392.81883041795, gamma=0.09265545895311562, kernel=linear ...\n",
+      "[CV]  C=97392.81883041795, gamma=0.09265545895311562, kernel=linear, total=  59.3s\n",
+      "[CV] C=97392.81883041795, gamma=0.09265545895311562, kernel=linear ...\n",
+      "[CV]  C=97392.81883041795, gamma=0.09265545895311562, kernel=linear, total=  38.9s\n",
+      "[CV] C=97392.81883041795, gamma=0.09265545895311562, kernel=linear ...\n",
+      "[CV]  C=97392.81883041795, gamma=0.09265545895311562, kernel=linear, total=  30.9s\n",
+      "[CV] C=2423.0759984939164, gamma=3.248614270240346, kernel=linear ....\n",
+      "[CV]  C=2423.0759984939164, gamma=3.248614270240346, kernel=linear, total=   9.4s\n",
+      "[CV] C=2423.0759984939164, gamma=3.248614270240346, kernel=linear ....\n",
+      "[CV]  C=2423.0759984939164, gamma=3.248614270240346, kernel=linear, total=   9.7s\n",
+      "[CV] C=2423.0759984939164, gamma=3.248614270240346, kernel=linear ....\n",
+      "[CV]  C=2423.0759984939164, gamma=3.248614270240346, kernel=linear, total=   9.0s\n",
+      "[CV] C=2423.0759984939164, gamma=3.248614270240346, kernel=linear ....\n",
+      "[CV]  C=2423.0759984939164, gamma=3.248614270240346, kernel=linear, total=   9.3s\n",
+      "[CV] C=2423.0759984939164, gamma=3.248614270240346, kernel=linear ....\n",
+      "[CV]  C=2423.0759984939164, gamma=3.248614270240346, kernel=linear, total=   7.8s\n",
+      "[CV] C=717.3632997255095, gamma=0.3165604432088257, kernel=linear ....\n",
+      "[CV]  C=717.3632997255095, gamma=0.3165604432088257, kernel=linear, total=   7.8s\n",
+      "[CV] C=717.3632997255095, gamma=0.3165604432088257, kernel=linear ....\n",
+      "[CV]  C=717.3632997255095, gamma=0.3165604432088257, kernel=linear, total=   8.7s\n",
+      "[CV] C=717.3632997255095, gamma=0.3165604432088257, kernel=linear ....\n",
+      "[CV]  C=717.3632997255095, gamma=0.3165604432088257, kernel=linear, total=   8.3s\n",
+      "[CV] C=717.3632997255095, gamma=0.3165604432088257, kernel=linear ....\n",
+      "[CV]  C=717.3632997255095, gamma=0.3165604432088257, kernel=linear, total=   7.8s\n",
+      "[CV] C=717.3632997255095, gamma=0.3165604432088257, kernel=linear ....\n",
+      "[CV]  C=717.3632997255095, gamma=0.3165604432088257, kernel=linear, total=   8.8s\n",
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
+      "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  13.4s\n",
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
+      "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.0s\n",
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
+      "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.7s\n",
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n",
+      "[CV]  C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf, total=  14.6s\n",
+      "[CV] C=4446.667521184072, gamma=3.3597284456608496, kernel=rbf .......\n"
      ]
     }
    ],
